@@ -15,3 +15,5 @@ max_size = 1000000
 when = midnight
 interval = 1
 backups = 5
+
+[packages]
